# playcall-intel

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: build_log.md
src/playcall_intel/: __main__.py  app.py  batch_normalize.py  client_factory.py  config.py  game_index.py  game_report.py  llm_client.py  llm_contract.py  llm_normalize.py  loader.py  mapper.py  normalizer.py  ollama_client.py  prompting.py  recap_contract.py  recap_generate.py  recap_prompting.py  schema.py  settings.py
src/playcall_intel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_llm_normalize_smoke.py  test_mapper_smoke.py  test_ollama_integration_smoke.py  test_result_smoke.py
